--- a/index.html
+++ b/index.html
@@ -9,11 +9,27 @@
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
             padding: 20px;
             color: var(--tg-theme-text-color);
-            background: var(--tg-theme-bg-color);
+            background: linear-gradient(-45deg, #0f2027, #203a43, #2c5364, #24243e);
+            min-height: 100vh;
+            margin: 0;
+            animation: gradient 15s ease infinite;
+            background-size: 400% 400%;
+        }
+
+        @keyframes gradient {
+            0% {
+                background-position: 0% 50%;
+            }
+            50% {
+                background-position: 100% 50%;
+            }
+            100% {
+                background-position: 0% 50%;
+            }
         }
 
         .button {
-            background: var(--tg-theme-button-color);
+            background: rgba(255, 255, 255, 0.1);
             color: var(--tg-theme-button-text-color);
             border: none;
             padding: 10px 20px;
@@ -21,13 +37,21 @@
             width: 100%;
             margin: 10px 0;
             cursor: pointer;
+            backdrop-filter: blur(5px);
+            transition: all 0.3s ease;
+        }
+
+        .button:hover {
+            background: rgba(255, 255, 255, 0.2);
         }
 
         .card {
-            background: var(--tg-theme-secondary-bg-color);
+            background: rgba(255, 255, 255, 0.1);
             padding: 15px;
             border-radius: 10px;
             margin: 10px 0;
+            backdrop-filter: blur(5px);
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
     </style>
 </head>
