ваше сообщение о коммите

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <body>
     <div class="card">
         <h2>Привет, <span id="username">пользователь</span>!</h2>
-        <p>Это простое мини-приложение для Telegram.</p>
+        <p>Самая лучшая лотерея</p>
     </div>
 
     <button class="button" onclick="showAlert()">Нажми меня</button>
