ваше сообщение о коммите

--- a/index.html
+++ b/index.html
@@ -59,10 +59,8 @@
     <div class="card">
         <h2>Привет, <span id="username">пользователь</span>!</h2>
         <p>Самая лучшая лотерея</p>
+        <img src="foto/loto_glav_menu.jpg" alt="Лотерея" style="width: 100%; border-radius: 8px;">
     </div>
-
-    <button class="button" onclick="showAlert()">Нажми меня</button>
-    <button class="button" onclick="sendData()">Отправить данные в бот</button>
 
     <script>
         let tg = window.Telegram.WebApp;
@@ -70,16 +68,6 @@
 
         // Устанавливаем имя пользователя
         document.getElementById('username').textContent = tg.initDataUnsafe.user?.first_name || 'пользователь';
-
-        function showAlert() {
-            tg.showAlert('Привет! Это тестовое уведомление.');
-        }
-
-        function sendData() {
-            tg.sendData('test_action');
-            // Закрываем приложение после отправки данных
-            tg.close();
-        }
     </script>
 </body>
 </html> 
