ваше сообщение о коммите

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <div class="card">
         <h2>Привет, <span id="username">пользователь</span>!</h2>
         <p>Самая лучшая лотерея</p>
-        <img src="foto/loto_glav_menu.jpg" alt="Лотерея" style="width: 100%; border-radius: 8px;">
+        <img src="./foto/loto_glav_menu.jpg" alt="Лотерея" style="width: 100%; border-radius: 8px;">
         <button class="button" onclick="buyWithStars()">Купить за 1 Stars</button>
     </div>
 
