--- a/index.html
+++ b/index.html
@@ -72,24 +72,25 @@
 
         // Функция покупки за Stars
         function buyWithStars() {
-            // Отправляем запрос боту для создания счета
-            tg.sendData(JSON.stringify({
-                action: 'create_stars_invoice',
-                item: 'lottery_ticket',
-                price: 1
-            }));
-            
-            // Устанавливаем обработчик для получения URL счета от бота
-            tg.onEvent('mainButtonClicked', function() {
-                if (window.invoiceUrl) {
-                    // Открываем счет для оплаты Stars
-                    tg.openInvoice(window.invoiceUrl, function(status) {
-                        if (status === 'paid') {
-                            tg.showAlert('Билет успешно куплен! Stars списаны.');
-                        } else {
-                            tg.showAlert('Оплата не была завершена.');
-                        }
-                    });
+            // Показываем подтверждение
+            tg.showPopup({
+                title: 'Покупка билета',
+                message: 'Вы хотите купить лотерейный билет за 1 Stars?',
+                buttons: [
+                    {text: 'Купить', type: 'default', id: 'buy_ticket'},
+                    {text: 'Отмена', type: 'cancel'}
+                ]
+            }, function(buttonId) {
+                if (buttonId === 'buy_ticket') {
+                    // Отправляем данные боту напрямую
+                    tg.sendData(JSON.stringify({
+                        action: 'create_stars_invoice',
+                        item: 'lottery_ticket',
+                        price: 1
+                    }));
+                    
+                    // Показываем сообщение пользователю
+                    tg.showAlert('Запрос на покупку отправлен!');
                 }
             });
         }
