--- a/number_selection.html
+++ b/number_selection.html
@@ -3,6 +3,7 @@
 <head>
     <title>Выбор номеров</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="telegram-web-app-ready" content="true">
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <style>
         body {
