--- a/number_selection.html
+++ b/number_selection.html
@@ -205,30 +205,63 @@
         // Получаем параметры из URL
         const urlParams = new URLSearchParams(window.location.search);
         const ticketType = urlParams.get('type');
-        const ticketPrice = parseInt(urlParams.get('price'));
+        let ticketPrice = urlParams.get('price');
 
-        console.log('Получены параметры URL:', {
-            search: window.location.search,
-            type: ticketType,
-            price: ticketPrice
+        console.log('Получены параметры из URL:', { 
+            ticketType: ticketType, 
+            ticketPrice: ticketPrice,
+            ticketPriceType: typeof ticketPrice 
         });
 
         // Проверяем наличие параметров
-        if (!ticketType || isNaN(ticketPrice)) {
-            console.error('Ошибка: отсутствуют необходимые параметры', {
-                type: ticketType,
-                price: urlParams.get('price')
-            });
-            tg.showAlert('Ошибка при загрузке параметров билета. Пожалуйста, вернитесь в главное меню и попробуйте снова.');
-            window.location.href = 'index.html';
-            throw new Error('Missing required parameters');
+        if (!ticketType || !ticketPrice) {
+            console.error('Отсутствуют необходимые параметры в URL');
+            alert('Ошибка: отсутствуют необходимые параметры. Вернитесь на главную страницу.');
+            return;
         }
 
-        console.log('Параметры билета:', {
-            type: ticketType,
-            price: ticketPrice,
-            rawParams: window.location.search
+        // Специальная обработка для стандартного билета
+        if (ticketType === 'Стандартный') {
+            console.log('Обработка стандартного билета');
+            // Преобразуем цену в число
+            ticketPrice = parseInt(ticketPrice, 10);
+            if (isNaN(ticketPrice)) {
+                console.warn('Цена стандартного билета не является числом, устанавливаем значение по умолчанию: 1');
+                ticketPrice = 1;
+            }
+        } else {
+            // Для других типов билетов преобразуем цену в число
+            ticketPrice = parseInt(ticketPrice, 10);
+            if (isNaN(ticketPrice)) {
+                console.error('Цена билета не является числом');
+                alert('Ошибка: некорректная цена билета. Вернитесь на главную страницу.');
+                return;
+            }
+        }
+
+        console.log('После обработки:', { 
+            ticketType: ticketType, 
+            ticketPrice: ticketPrice,
+            ticketPriceType: typeof ticketPrice 
         });
+
+        // Загружаем данные о текущем билете из localStorage
+        try {
+            const savedTicketData = localStorage.getItem('currentTicket');
+            if (savedTicketData) {
+                const ticketData = JSON.parse(savedTicketData);
+                console.log('Загружены данные билета из localStorage:', ticketData);
+                
+                // Если данные в URL и localStorage не совпадают, используем данные из URL
+                if (ticketData.type !== ticketType || ticketData.price !== ticketPrice) {
+                    console.warn('Данные в URL и localStorage не совпадают, используем данные из URL');
+                }
+            } else {
+                console.log('Данные о билете в localStorage отсутствуют, используем данные из URL');
+            }
+        } catch (error) {
+            console.error('Ошибка при загрузке данных билета из localStorage:', error);
+        }
         
         // Массив для хранения всех билетов
         const tickets = [];
