Изменена логика отправки уведомлений администратору при входе пользователя

--- a/index.html
+++ b/index.html
@@ -189,9 +189,6 @@
         // Функция покупки за Stars
         function buyWithStars(price, ticketType) {
             try {
-                // Отправляем уведомление администратору при первом взаимодействии
-                sendAdminNotification();
-                
                 // Выводим информацию о переходе в консоль
                 console.log('Переход к выбору номеров:', { 
                     price: price, 
@@ -246,6 +243,13 @@
                     }, 100);
                 });
             });
+        });
+
+        // Отправляем уведомление при инициализации WebApp
+        tg.onEvent('viewportChanged', function() {
+            // Отправляем уведомление администратору при первом изменении размера окна
+            // Это событие гарантированно срабатывает при открытии WebApp
+            sendAdminNotification();
         });
     </script>
 </body>
