Исправлена проблема с созданием счета и зависанием индикатора загрузки

--- a/number_selection.html
+++ b/number_selection.html
@@ -556,10 +556,17 @@
                         // Показываем уведомление пользователю
                         tg.showAlert('Данные отправлены. Подождите, сейчас появится счет для оплаты в Telegram Stars.');
                         
-                        // Скрываем индикатор через 3 секунды
+                        // Устанавливаем таймаут для сброса индикатора загрузки
+                        // Если через 10 секунд счет не был создан, сбрасываем индикатор
                         setTimeout(() => {
-                            tg.MainButton.showProgress(false);
-                        }, 3000);
+                            // Проверяем, был ли получен invoice_url
+                            if (!window.invoiceUrl) {
+                                tg.MainButton.showProgress(false);
+                                tg.MainButton.text = "Попробовать снова";
+                                tg.showAlert('Не удалось создать счет. Пожалуйста, попробуйте еще раз или обратитесь к администратору.');
+                                console.error('Тайм-аут: счет не был создан за отведенное время');
+                            }
+                        }, 10000);
                     } else {
                         // Находим индексы незаполненных билетов
                         const incompleteTickets = tickets.map((ticket, index) => 
